--- a/task_window.kv
+++ b/task_window.kv
@@ -1,5 +1,18 @@
 MDFloatLayout:
 
+    MDFillRoundFlatIconButton:
+        icon: "calendar-clock"
+		text: "Date"
+		pos_hint: {'x':.45, 'y':.57}
+		on_release: app.show_date_picker()
+
+
+    MDFillRoundFlatIconButton:
+        icon:"clock"
+		text: "Time"
+		pos_hint: {'x':.66, 'y':.57}
+		on_release: app.show_time_picker()
+
 
 
     MDLabel:
