--- a/kv/task_window.kv
+++ b/kv/task_window.kv
@@ -3,14 +3,14 @@ MDFloatLayout:
     MDFillRoundFlatIconButton:
         icon: "calendar-clock"
 		text: "Date"
-		pos_hint: {'x':.45, 'y':.57}
+		pos_hint: {'x': 0.3, 'y':.57}
 		on_release: app.show_date_picker()
 
 
     MDFillRoundFlatIconButton:
         icon:"clock"
 		text: "Time"
-		pos_hint: {'x':.66, 'y':.57}
+		pos_hint: {'x': 0.7, 'y':.57}
 		on_release: app.show_time_picker()
 
 
