--- a/kv/screen_manager.kv
+++ b/kv/screen_manager.kv
@@ -1,5 +1,5 @@
-#:include main_screen.kv
-#:include booked_tasks.kv
+#:include all_screens.kv
+#:include login.kv
 
 
 ScreenManager:
@@ -22,3 +22,6 @@ ScreenManager:
     Settings:
         name: "settings"
         id: settings
+    Login:
+        name: "login"
+        id: login
